--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "source": "/:path*",
       "destination": "/api"
+    },
+    {
+      "source": "/",
+      "destination": "/api"
     }
   ],
   "$schema": "https://openapi.vercel.sh/vercel.json"
